<resources>
    <string name="app_name">TenThousandDiceGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules_of_the_game">Rules Of The Game</string>
    <string name="the_first_roll_nthe_game_is_played_with_six_dice_n_to_begin_each_player_must_score_a_total_of_600_points_to_get_on_the_board_n_this_is_done_by_rolling_and_holding_the_scoring_die_or_combinations_until_either_the_player_doesn_t_have_a_scoring_roll_or_the_player_chooses_to_take_current_score">The First Roll\nThe game is played with six dice.\n To begin, each player must score a total of 600 points to get on the board.\n This is done by rolling and holding the scoring die or combinations until either the player doesn\'t have a scoring roll, or the player chooses to take current score.</string>
    <string name="scoring_n_one_equals_100_points_five_equals_50_points_n_three_ones_equal_1_000_points_three_of_any_other_number_equals_its_face_value_times_100_n_for_example_roll_three_twos_and_score_200_points_roll_three_fours_and_score_400_points_n_a_run_of_one_through_six_equals_3_000_points_three_pairs_equals_1_000_points_which_includes_four_of_a_kind_plus_a_pair">Scoring\n One equals 100 points, Five equals 50 points\n Three ones equal 1,000 points, Three of any other number equals its face value times 100.\n For example, roll three twos and score 200 points, roll three fours and score 400 points.\n A run of one through six equals 3,000 points. Three pairs equals 1,000 points, which includes four of a kind plus a pair.</string>
    <string name="continuing_play_n_the_player_keeps_rolling_the_remaining_dice_and_must_set_aside_at_least_one_die_from_each_scoring_combination_n_player_must_score_each_throw_separately_for_example_player_can_t_use_a_three_from_the_first_roll_and_two_threes_from_the_second_roll_to_make_three_of_a_kind_n_player_keeps_playing_until_either_player_has_a_zero_throw_and_gets_no_score_for_the_whole_turn_or_decides_to_stop_n_if_player_has_removed_all_six_dice_because_they_scored_player_may_throw_all_six_again_and_keeps_scoring">Continuing Play\n The player keeps rolling the remaining dice and must set aside at least one die from each scoring combination.\n Player must score each throw separately; for example, Player can\'t use a three from the first roll and two threes from the second roll to make three of a kind.\n Player keeps playing until either Player has a zero throw and gets no score for the whole turn, or decides to stop.\n If Player has removed all six dice because they scored, Player may throw all six again and keeps scoring.</string>
    <string name="how_to_win_n_the_player_who_accumulates_10_000_points_first_is_the_winner_n_but_if_other_players_haven_t_yet_finished_their_turns_they_continue_to_play_n_if_one_of_them_scores_higher_than_10_000_points_that_player_is_the_winner">How to Win\n The player who accumulates 10,000 points first is the winner.\n But if other players haven\'t yet finished their turns, they continue to play.\n If one of them scores higher than 10,000 points, That Player is the winner.</string>
    <string name="dice1">dice1</string>
    <string name="dice2">dice2</string>
    <string name="dice3">dice3</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="current_score">Current Score</string>
    <string name="roll">Roll</string>
    <string name="take_score">Take Score</string>
    <string name="player_1_0">Player 1: 0</string>
    <string name="player_2_0">Player 2: 0</string>
    <string name="current_score_0">Current Score: 0</string>
</resources>