<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/player1"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="33dp"
            android:text="@string/player_1_0"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/player2"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="33dp"
            android:layout_toEndOf="@id/player1"
            android:text="@string/player_2_0"
            android:textSize="24sp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/currentScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/current_score_0"
        android:textAlignment="center"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:src="@drawable/dice1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="TODO">
            </ImageView>

        <ImageView
            android:src="@drawable/dice2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </ImageView>

        <ImageView
            android:src="@drawable/dice3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:src="@drawable/dice4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="TODO">
        </ImageView>

        <ImageView
            android:src="@drawable/dice5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="TODO">
        </ImageView>

        <ImageView
            android:src="@drawable/dice6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </ImageView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/roll_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="33dp"
            android:textSize="30sp"
            android:text="@string/roll" />

        <Button
            android:id="@+id/take_score_button"
            android:layout_width="195dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="33dp"

            android:layout_marginEnd="33dp"
            android:layout_marginBottom="33dp"
            android:layout_toEndOf="@id/roll_button"
            android:text="@string/take_score"
            android:textSize="18sp" />

    </RelativeLayout>




</LinearLayout>
