<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:text="@string/rules_of_the_game"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/paragraph1Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paragraph1Text"
        android:layout_width="356dp"
        android:layout_height="116dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/rules_of_the_game"
        android:ems="10"
        android:gravity="center_horizontal"
        android:importantForAutofill="no"
        android:text="@string/the_first_roll_nthe_game_is_played_with_six_dice_n_to_begin_each_player_must_score_a_total_of_600_points_to_get_on_the_board_n_this_is_done_by_rolling_and_holding_the_scoring_die_or_combinations_until_either_the_player_doesn_t_have_a_scoring_roll_or_the_player_chooses_to_take_current_score"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/paragraph2Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/paragraph2Text"
        android:layout_width="359dp"
        android:layout_height="156dp"
        android:layout_marginBottom="3dp"
        android:gravity="center_horizontal"
        android:text="@string/scoring_n_one_equals_100_points_five_equals_50_points_n_three_ones_equal_1_000_points_three_of_any_other_number_equals_its_face_value_times_100_n_for_example_roll_three_twos_and_score_200_points_roll_three_fours_and_score_400_points_n_a_run_of_one_through_six_equals_3_000_points_three_pairs_equals_1_000_points_which_includes_four_of_a_kind_plus_a_pair"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/paragraph3Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paragraph1Text" />

    <TextView
        android:id="@+id/paragraph3Text"
        android:layout_width="365dp"
        android:layout_height="182dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="3dp"
        android:gravity="center_horizontal"
        android:text="@string/continuing_play_n_the_player_keeps_rolling_the_remaining_dice_and_must_set_aside_at_least_one_die_from_each_scoring_combination_n_player_must_score_each_throw_separately_for_example_player_can_t_use_a_three_from_the_first_roll_and_two_threes_from_the_second_roll_to_make_three_of_a_kind_n_player_keeps_playing_until_either_player_has_a_zero_throw_and_gets_no_score_for_the_whole_turn_or_decides_to_stop_n_if_player_has_removed_all_six_dice_because_they_scored_player_may_throw_all_six_again_and_keeps_scoring"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/paragraph4Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paragraph2Text" />

    <TextView
        android:id="@+id/paragraph4Text"
        android:layout_width="364dp"
        android:layout_height="138dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="3dp"
        android:gravity="center_horizontal"
        android:text="@string/how_to_win_n_the_player_who_accumulates_10_000_points_first_is_the_winner_n_but_if_other_players_haven_t_yet_finished_their_turns_they_continue_to_play_n_if_one_of_them_scores_higher_than_10_000_points_that_player_is_the_winner"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paragraph3Text" />


</androidx.constraintlayout.widget.ConstraintLayout>